# nepalwill-backend

./: .env.sample  .gitignore  .pylintrc  README.md  build  build.sh  dumpdata.sh  loaddata.sh  passenger_wsgi.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: dev-deploy.yml
_dockerfile/: Makefile  docker-compose.yaml
contacts/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
core/: choices.py  config.py  database_router.py  form.py  manager.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  settings.py  urls.py  views.py
dummys/: admin.py  apps.py  form.py  models.py  serializer.py  urls.py  views.py
dummys/migrations/: 0001_initial.py
sendmail/: views.py
static/css/: custom_admin.css
static/js/: custom_admin.js
templates/: 404.html
users/: admin.py  apps.py  form.py  manager.py  models.py  serializers.py  urls.py  views.py
users/dummyviews/: create.py  edit.py  get.py
users/management/commands/: create_default_superuser.py
users/migrations/: 0001_initial.py
utils/: generate_random_number.py  save_image.py
